# were_legends

./: .gitignore  Caddyfile-dev
backend/: Cargo.toml  Dockerfile
backend/src/: env.rs  main.rs  models.rs  session_management.rs  state.rs
backend/src/game/: messages.rs  mod.rs  player.rs  team_builder.rs
backend/src/game/player/: classes.rs  mod.rs  proxy.rs
backend/src/game/player/classes/: bot.rs  crook.rs  droid.rs  impostor.rs  kamikaze.rs  mod.rs  romeo.rs  super_hero.rs  two_face.rs
backend/src/lol_api/: account.rs  mod.rs  spectator.rs  summoners.rs
backend/src/routes/: error.rs  game.rs  mod.rs
frontend/: .dockerignore  Dockerfile  data.json  package-lock.json  package.json  tailwind.config.js
frontend/data/: roles.json
frontend/src/: api.ts  api.tsx  config.ts  idata.ts  session.ts  session.tsx  utils.ts
frontend/src/components/: inputs.tsx  roles.tsx
frontend/src/pages/: _app.tsx  error.tsx  game.tsx  index.tsx  join.tsx  login.tsx  rules.tsx
frontend/src/pages/game/: [uid].tsx
frontend/src/styles/: globals.css
