[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
mutable = { version = "0.2.8", features = ["uuid"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.29.1", features = ["sync"] }
uuid = { version = "1.3.0", features = ["v4"] }
