[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envconfig = "0.10.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
mutable = { version = "0.2.8", features = ["uuid"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.29.1", features = ["sync"] }
tracing = "0.1.37"
uuid = { version = "1.3.0", features = ["v4"] }
